--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="tab_text_1">Dairy products</string>
     <string name="tab_text_2">Juices</string>
     <string name="title_activity_restock">restock</string>
+    <string name="textview">TextView</string>
 </resources>
